Change branch in dependency

--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,4 @@
 {deps, [
-    {eto_common, ".*", {git, "git://git.corp.smarkets.com/eto_common.git", {branch, "master"}}},
+    {eto_common, ".*", {git, "git://git.corp.smarkets.com/eto_common.git", {branch, "ticket-3228-new-types"}}},
     {smk_api_docs, ".*", {git, "git://git.corp.smarkets.com/smk_api_docs.git", {branch, "master"}}}
   ]}.
