change to github

--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,4 @@
 {deps, [
-    {eto_common, ".*", {git, "git://git.corp.smarkets.com/eto_common.git", {branch, "master"}}},
-    {smk_api_docs, ".*", {git, "git://git.corp.smarkets.com/smk_api_docs.git", {branch, "master"}}}
+    {eto_common, ".*", {git, "https://github.com/smarkets/eto_common.git", {tag, "0.1-alpha"}}},
+    {smk_api_docs, ".*", {git, "https://github.com/smarkets/smk_api_docs.git", {tag, "0.1-alpha"}}}
   ]}.
