--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,3 @@
 {deps, [
-    {eto_common, ".*", {git, "git://git.corp.smarkets.com/eto_common.git", {branch, "master"}}},
-    {smk_api_docs, ".*", {git, "git://git.corp.smarkets.com/smk_api_docs.git", {branch, "master"}}}
+    {eto_common, ".*", {git, "git://git.corp.smarkets.com/eto_common.git", {branch, "master"}}}
   ]}.
