github url and tag for deps

--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,3 @@
 {deps, [
-    {eto_common, ".*", {git, "git://git.corp.smarkets.com/eto_common.git", {branch, "0.1.1"}}}
+    {eto_common, ".*", {git, "git://github.com/smarkets/eto_common.git", {tag, "v0.2.0"}}}
   ]}.
