--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,3 @@
 {deps, [
-    {eto_common, ".*", {git, "git://git.corp.smarkets.com/eto_common.git", {tag, "v0.2.1"}}}
+    {eto_common, ".*", {git, "git://git.corp.smarkets.com/eto_common.git", {branch, "downtime"}}}
   ]}.
