--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,4 @@
 {deps, [
-    {eto_common, ".*", {git, "git@git.corp.smarkets.com:smarkets/eto_common.git", {tag, "v0.3.3"}}}
+    {eto_common, ".*", {git, "git@git.corp.smarkets.com:smarkets/eto_common.git", {tag, "v0.3.3"}}},
+    {piqi, ".*", {git, "git@git.corp.smarkets.com:smarkets/piqi-erlang.git", {branch, "master"}}}
   ]}.
