--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,4 @@
 {deps, [
-    {eto_common, ".*", {git, "git@git.corp.smarkets.com:smarkets/eto_common.git", {tag, "v1.2.0"}}},
-    {piqi, ".*", {git, "git@git.corp.smarkets.com:smarkets/piqi-erlang.git", {branch, "master"}}}
+    {eto_common, ".*", {git, "https://github.com/smarkets/eto_common.git", {tag, "v1.2.0"}}},
+    {piqi, ".*", {git, "https://github.com/smarkets/piqi-erlang.git", {branch, "master"}}}
   ]}.
