--- a/rebar.config
+++ b/rebar.config
@@ -2,3 +2,6 @@
     {eto_common, ".*", {git, "https://github.com/smarkets/eto_common.git", {tag, "v1.2.0"}}},
     {piqi, ".*", {git, "https://github.com/smarkets/piqi-erlang.git", {branch, "master"}}}
   ]}.
+
+{pre_hooks, [{compile, "./priv/make-proto.sh"},
+             {clean, "rm seto.piqi.proto"}]}.
