Pin dependencies to tagged versions
Reviewed-by: Roberto Bruggemann <roberto.bruggemann@smarkets.com>

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {deps, [
-    {eto_common, ".*", {git, "https://github.com/smarkets/eto_common.git", {tag, "v1.2.0"}}},
-    {piqi, ".*", {git, "https://github.com/smarkets/piqi-erlang.git", {branch, "master"}}}
+    {eto_common, ".*", {git, "https://github.com/smarkets/eto_common.git", {tag, "v1.2.1"}}},
+    {piqi, ".*", {git, "https://github.com/smarkets/piqi-erlang.git", {tag, "v0.7.2-1"}}}
   ]}.
 
 {pre_hooks, [{compile, "./priv/make-proto.sh"},
